Update Python Google Searcher.ipynb

--- a/Python Google Searcher.ipynb
+++ b/Python Google Searcher.ipynb
@@ -15,8 +15,8 @@
     "   str1=key.get() \n",
     "   res=requests.get('https://google.com/search?q='+''.join(str1))#search content\n",
     "   res.raise_for_status() #raise an excetion if request is unsuccessfull\n",
-    "   soup=bs4.BeautifulSoup(res.text,\"html.parser\")\n",
-    "   linkElements=soup.select('.r a') # extract all links from google search results\n",
+    "   soup=bs4.BeautifulSoup(res.text,\"html.parser\")#parsing all html tags inside 'res'\n",
+    "   linkElements=soup.select('.r a') # extract all links from google search results using soup\n",
     "   linkToOpen=min(5,len(linkElements))#number of webpages you want to open\n",
     "   for i in range(linkToOpen):\n",
     "       webbrowser.open('https://google.com'+linkElements[i].get('href')) #opening pages in web browser\n",
